addressed John's comments' '

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -1,6 +1,6 @@
 ## 1. Introduction
 
-Molecular mechanics (MM) small molecules force fields are essential to the molecular design for chemical
+Molecular mechanics (MM) small molecule force fields are essential to the molecular design for chemical
 biology and drug discovery, as well as the use of molecular simulation to understand the
 behavior of biomolecular systems. However, small molecule force fields have lagged behind
 protein force fields given the larger chemical space these force fields must cover to provide good
@@ -16,11 +16,11 @@ In many molecular mechanics force fields (e.g., Amber [@doi:10.1021/ja00124a002]
 CHARMM [@doi:10.1002/jcc.540040211], OPLS [@doi:10.1021/ja9621760]) a low-order Fourier series, such as
 a cosine series, is often used to represent the contribution of torsion terms to the potential energy.
 
-$$ E_{tor} = \sum_{n=1}^{6} \frac{V_n}{2}[1 + cos n(\theta - \gamma)]$$
+$$ E_{tor} = \sum_{n=1}^{N} \frac{V_n}{2}[1 + cos[n(\theta - \gamma)]]$$
 
 where $V_i$ is the torsion force constant which determines the amplitudes, $n$ is the multiplicity which determines the
 number of minimas, and $\gamma$ is the phase angle which is sometimes set to $0^{\circ}$ or $180^{\circ}$ to enforce
-symmetry around zero.
+symmetry around zero. In most force fields $N$ is 4, however, some go up to 7.
 The torsion potential energy parameters such as amplitudes and phase angles for each Fourier term, 
 are generally fit to the residual difference between gas phase quantum chemistry (QC) torsion energy 
 profile and the non-torsion MM parameters [@doi:10.1007/s00894-008-0305-0]. The QC torsion energy profile
@@ -75,15 +75,15 @@ those are the reactive sites of molecules. However, for our application, we espe
 reactive points given how electron rich they are and how much the electronic density changes when they are altered. 
 Fragmentation algorithms for linear scaling such as Divide-and-Conquer methods [@doi:10.1063/1.472136], effective fragment potential method
 [@doi:10.1002/jcc.10309] and systematic molecular fragmentation methods [@doi:10.1039/c2cp23832b] require the users to manually 
-specify where the cuts should be or which bonds not to fragment. Furthermore, none of these methods address the needs specific
+specify where the cuts should be or which bonds not to fragment. Furthermore, besides the scheme suggested by Rai et. al. [@doi:10.1021/acs.jcim.9b00373], none of these methods address the needs specific
 to fragmenting molecules for QC torsion scans. Fragments need to include all atoms involved in 1-4 interactions, since they 
 are incorporated in the fitting procedure. We also need a systematic way to determine if remote substituents change
 the barrier to rotation significantly for the central bond of interest.
 
 In this work, we use the Wiberg Bond Order (WBO) [@doi:10/fvwkkh], which is both simple to calculate
 from semi-empirical QC methods and is sensitive to the chemical environment around a bond. WBOs quantify electron population
-overlap between bonds, or the degree of binding between atoms. WBOs are correlated with bond
-vibrational frequencies [@doi:10.1021/jp4010345, @doi:10.1351/pac198961040635] and is used to predict trigger bonds in high energy-density material
+overlap between bonds, or the degree of binding between atoms. Bond orders are correlated with bond
+vibrational frequencies [@doi:10.1021/jp4010345; @doi:10.1351/pac198961040635] and WBOs are used to predict trigger bonds in high energy-density material
 because it is correlated with the strength of the bond [@doi:10.1002/cphc.201500773]. Wei, et. al. [@doi:10.1021/acs.jcim.9b00585] have shown
 that simple rules for electron richness of aromatic systems in biaryls are good indication of torsion force constants (specifically for V~2~), however, this
 measure was only developed for biaryls and it does not take into account substituents beyond the aromatic ring directly adjacent to the bond.
