--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -7,10 +7,10 @@ In a molecular graph, the nodes correspond to the atoms and the bonds correspond
 We define rotatable bonds as bonds that are not in rings and they are subset of edges, $e' \in E$.
 
 The weights on the edges are given by $\delta(e')$ where $\delta$ is the RMSE of the torsion potential around the bond in
-the full graph vs. a subgraph. We want to find a set of partitions $v of V$ such that for all $v' \in v$, $v' \leq k$ where
-k is an integer $4 \leq K \leq |V|-1$. The subgraph $G[v']$ induced by $v'$ is connected and has a minimal total error
+the full graph vs. a subgraph. We want to find a set of partitions $v$ of $V$ such that for all $v' \in v$, $v' \leq k$ where
+k is an integer $4 \leq k \leq |V|-1$. The subgraph $G[v']$ induced by $v'$ is connected and has a minimal total error
 
-$$Total RMSE =  \sum_{v' \in v} |\delta(e')|$${eq:graph}
+$$ RMSE =  \sum_{v' \in v} |\delta(e')|$${#eq:graph}
 
 where $e'$ is the central, rotatable bond in the subgraph $v'$.
 
