--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -29,14 +29,14 @@ In this case, a small change three bonds away from the torsion central bond chan
 a rotatable bond to a non-rotatable conjugated bond. When fragmenting molecules, we need to avoid
 destroying a bond's chemical environment by naively removing an important remote substituent.
 
-![**Torsion profiles can be sensitive to remote chemical chnanges in a molecule**
+![**Torsion profiles can be sensitive to remote substituents changes in a molecule**
 **[A]** Biphenyl protonation states and tautomers with increasing Wiberg bond order for the central bond.
 **[B]** The resonance structure of the biphenyl zwitterion shows that the central bond is conjugated. The Wiberg bond order
 and torsion scan for this bond (see **A** and **C**) are reflective of a conjugated bond. **[C]** Relative QC energy as a function of
-torsion angle of the central bond. The colors of the QC scan corresponds to the highlighted bonds in **A**. **[D]** Relative MM
-energy as a function of torsion angle of the central bond. The colors in the MM scan correspond to the highlighted bonds in **A**.
+torsion angle of the central bond computed via QCArchive at B3LYP-D3(BJ) / DZVP level of theory. The colors of the QC scan corresponds to the highlighted bonds in **A**. **[D]** Same as
+**C** but using MM energy computed via the openff-1.0.0 force field.
 **[E]** Torsion barrier heights vs WBOs. The color of the data points correspond to the highlighted bonds in **A**.
-The QC torsion barrier height is linear WBO.](images/figure_3.svg){#fig:biphenyls}
+The QC torsion barrier height scales linearly with the WBO.](images/figure_3.svg){#fig:biphenyls}
 
 ### 3.2 The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
 The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
