--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -36,7 +36,7 @@ and torsion scan for this bond (see **A** and **C**) are reflective of a conjuga
 torsion angle of the central bond computed via QCArchive at B3LYP-D3(BJ) / DZVP level of theory. The colors of the QC scan corresponds to the highlighted bonds in **A**. **[D]** Same as
 **C** but using MM energy computed via the openff-1.0.0 force field.
 **[E]** Torsion barrier heights vs WBOs. The color of the data points correspond to the highlighted bonds in **A**.
-The QC torsion barrier height scales linearly with the WBO.](images/figure_3.svg){#fig:biphenyls}
+The QC torsion barrier height scales linearly with the WBO.](images/figure_3_2.svg){#fig:biphenyls}
 
 ### 3.2 The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
 The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
