--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -52,7 +52,7 @@ orthogonal but the WBO can be calculated via Löwdin normalization [@doi:10.1063
 
 We calculated the WBO from AM1 calculations for the biphenyl series as shown in figure @fig:biphenyls A. The increase in the WBO corresponds
 to increasing conjugation and torsion energy barrier height of the bond. When the torsion energy barrier heights are plotted against
-the WBO (fig @fig:biphenyls E), the relationship is linear with an $R^2$ of 0.97.
+the WBO (fig @fig:biphenyls E), the relationship is linear with an $r^2$ of 0.97.
 
 ### 3.3 The WBO is an inexpensive surrogate for the chemical environment around a bond
 Since the WBO can be calculated from a cheap AM1 calculation, is indicative of a bond's conjugation, and is correlated with torsion energy
