--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -47,7 +47,7 @@ occupied atomic orbitals on atoms A and B
 
 \begin{equation} W_{AB} = \sum_{\mu\in A}\sum_{\nu\in B} P^2_{\mu\nu} \end{equation}
 
-The Wiberg bond order assumes atomic orbitals (AOs) are orthonormal. In ab initio calculations, however, AOs are not
+The Wiberg bond order assumes atomic orbitals (AOs) are orthogonal. In ab initio calculations, however, AOs are not
 orthogonal but the WBO can be calculated via Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] which is how it is calculated in Psi4 [@doi:10.1021/acs.jctc.7b00174].
 
 We calculated the WBO from AM1 calculations for the biphenyl series as shown in figure @fig:biphenyls A. The increase in the WBO corresponds
