--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -4,8 +4,9 @@
 
 A molecular structure can be modeled as a degree bounded graph $G = (V, E)$ where $V$ are the nodes and $E$ are the edges.
 In a molecular graph, the nodes correspond to the atoms and the bonds correspond to the edges.
-We define rotatable bonds as bonds that are not in rings and they are subset of edges, $e' \in E$ and $\mathcal{G}$ as a set
-of allowable subgraphs, where each subgraph $G' \in \mathcal{G}$ is built around a rotatable bond with the following conditions:
+We define rotatable bonds as a set bonds in the molecule that are not in rings, $mathcal{E} \subset E$, and $\mathcal{G}$ as a set
+of allowable subgraphs, where each subgraph $G'(V', E') \in \mathcal{G}$ is built around a central, rotatable bond, $e' \in \mathcal{E}$
+with the following conditions:
 
 * The number of atoms in $G'$, $|V'|$, are $4 \leq |V'| \leq |V|$
 * The minimum edges in $G'$ are $e'$ and all $e \in E$ such that $e, e'$ share a vertex
@@ -23,7 +24,7 @@ $$ c(G') \propto (|V'|)^{2.6} $$
 
 Which leads to minimizing
 
-$$ \sum_{e' \in E} |\gamma(e';  G') - c(G'; e')|$${#eq:graph}
+$$ \sum_{e' \in \mathcal{E}} |\gamma(e';  G') - c(G'; e')|$$
 
 The search space of $\mathcal G$ for each rotatable bond is combinatorial and its upper bound is ${|V|\choose{4}} + {|V|\choose{5}} + ... {|V|\choose{|V|}}$
 since all $G' \in \matchal G$ need to be connected and rings are not fragmented. To reduce the search space, we also define a list
