--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -4,7 +4,7 @@
 
 A molecular structure can be modeled as a degree bounded graph $G = (V, E)$ where $V$ are the nodes and $E$ are the edges.
 In a molecular graph, the nodes correspond to the atoms and the bonds correspond to the edges.
-We define rotatable bonds as a set bonds in the molecule that are not in rings, $mathcal{E} \subset E$, and $\mathcal{G}$ as a set
+We define rotatable bonds as a set bonds in the molecule that are not in rings, $\mathcal{E} \subset E$, and $\mathcal{G}$ as a set
 of allowable subgraphs, where each subgraph $G'(V', E') \in \mathcal{G}$ is built around a central, rotatable bond, $e' \in \mathcal{E}$
 with the following conditions:
 
@@ -27,7 +27,7 @@ Which leads to minimizing
 $$ \sum_{e' \in \mathcal{E}} |\gamma(e';  G') - c(G'; e')|$$
 
 The search space of $\mathcal G$ for each rotatable bond is combinatorial and its upper bound is ${|V|\choose{4}} + {|V|\choose{5}} + ... {|V|\choose{|V|}}$
-since all $G' \in \matchal G$ need to be connected and rings are not fragmented. To reduce the search space, we also define a list
+since all $G' \in \mathcal G$ need to be connected and rings are not fragmented. To reduce the search space, we also define a list
 of functional groups that should not be fragmented in @tbl:fgroups.
 
 Given how large the search space can become, we use several heuristics as described in section 3.4.
