added SI figures

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -76,7 +76,7 @@ purple (8, 9), orange (9, 10), grey (23, 19), and green(24, 24)).
 Bonds in conjugated systems have higher correlations between their WBOs (see the aromatic ring systems in the two lower right diagonal squares).
 Both bonds (23, 19) (grey) and (24, 23) (green) have WBOs that are correlated with their neighboring ring systems, but
 bond (23, 19) are more correlated with the ring systems than the green bond (24, 23).
-**[D]** Resonance structures of Gefitinib illustrates why the grey bond (23, 19) has higher variance than the green bond (24, 23) even if
+**[D]** Resonance structures of Gefitinib illustrate why the grey bond (23, 19) has higher variance than the green bond (24, 23) even if
 both bonds are conjugated. When the double bond is on bond (23, 19), the negative charge is on a nitrogen which is the more stable form, vs
 the resonance structure where the double bond is on (24, 23) with the negative charge on a carbon.
 **[E]** The conformations of the molecule for the highest WBO and lowest in the distribution. The mode with higher WBOs has bond
@@ -84,7 +84,7 @@ the resonance structure where the double bond is on (24, 23) with the negative c
 so there is less electron population overlap in out of plane conformation.](images/figure-4.svg){#fig:wbo_var_corr}
 
 To investigate how WBOs change with conformation, we used Omega [@doi:10.1021/ci100031x] to generate
-conformers for a set of kinase inhibitors `[hold for SI]`{.red} and calculated the Lowdin-Wiberg bond order for each conformation from a
+conformers for a set of kinase inhibitors (SI Figure @fig:kinase_inhibitors) and calculated the WBO for each conformation from a
 B3LYP-D3(BJ) / DZVP [@doi:10.1139/v92-079; @doi:10.1063/1.464913; @doi:10.1063/1.3382344; @doi:10.1002/jcc.21759] geometry optimized calculation
 using Psi4 [@doi:10.1021/acs.jctc.7b00174]. Omega is a knowledge-based
 conformer generator that uses a modified version of MMFF94s [@doi:10/brxdg7] to score conformations. It has been shown to accurately reproduce experimentally
@@ -100,14 +100,14 @@ with their neighboring ring systems, however, While the distribution of WBOs for
 with the resonance structures shown in figure @fig:wbo_var_corr. The resonance strictures that have the double bond on the bond closer to
 the quinazoline (bond 19-23) are more stable because the negative charge is on a nitrogen. When the double bond is on the neighboring
 23-24 bond, the negative charge is on an aromatic carbon which is less stable. The results are similar for other kinase inhibitors
-tested shown in `[hold for SI]`{.red}. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (fig @fig:wbo_var_corr, E)
+tested shown in SI Figure @fig:kinase_inhibitors. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (fig @fig:wbo_var_corr, E)
 we found that conformations with lowest WBO on bond 19-23 had that bond out of plane while the conformation with the highest WBO value
-had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Fig @fig:sub_phenyl_qc_scan shows Lowdin-Wiberg
-bond order for each point in the QC corresponding torsion scans. The WBOs are anti-correlated with the torsion potential energy
+had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Fig @fig:sub_phenyl_qc_scan shows the WBO
+for each point in the QC corresponding torsion scans. The WBOs are anti-correlated with the torsion potential energy
 which is in line with chemical intuition. Conjugation stabilizes conformations and leads to more electronic population overlap in bonds [@doi:10.1351/pac198961040635].
 At higher energy conformers, the aromatic rings are out of plan and cannot conjugate. Therefore the WBO is lower for those conformers. At lower energy
 conformations, the rings are in plane and can conjugate so the WBO is higher. We found that the trends discusses above are similar when using semi-empirical methods
-such as AM1 and HF3C `(hold for SI)`{.red}
+such as AM1 (SI Figure @fig:si_wbo_dist).
 
 #### 3.3.2 Bonds in conjugated systems have highly correlated conformation-dependent WBOs
 We found that certain bond orders are strongly correlated or anti-correlated with each other, indicating strong electronic coupling. As bonds in
