added Chris's paragraph'

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -125,11 +125,11 @@ for other kinase inhibitors tested as shown in `(hold for SI)`{.red}.
 
 #### 3.3.3 ELF10 provides a useful way to capture informative conformation-independent WBOs
 
-![**Standard deviations of conformation dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
+![**Standard deviations of conformation-dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
 The distribution of standard deviations of WBO distributions over conformations is shown in blue. The distribution of standard deviations of ELF10 WBO distributions for the same
 bond in different chemical environments is shown in pink. The changes in WBO due to conformations are smaller than the changes in WBO due to chemical changes around the bond.
-The validation set (SI @fig:validation_set), was used to generate these distributions. The blue std distribution was calculated over 140602 WBO dependent distributions (this is the
-number of individual fragments in the dataset). The pink std distribution was calculated over 366 distributions of 366 bonds
+The validation set (SI @fig:validation_set), was used to generate these distributions. The blue sandard deviation distribution was calculated over 140602 WBO dependent distributions (this is the
+number of individual fragments in the dataset). The pink standard deviation distribution was calculated over 366 distributions of 366 bonds
 in different chemical environments (of the 140602 fragments)](images/standard_deviations.svg){#fig:standard_deviations}
 
 As we have shown, the WBO is conformation dependent and this dependency can also be highly informative of the electronic coupling
@@ -139,7 +139,14 @@ use WBOs as a surrogate to determine if our fragment is representative of the pa
 we need a way to capture informative conformation-independent WBOs. Electronically Least-interacting Functional groups (ELF) conformation selection implemented in quacpac
 [@url:https://docs.eyesopen.com/applications/quacpac/index.html] resolves the issue of sensitivity of molecular mechanics electrostatic energies from QM derived charges.
 
-[Leave to Christopher Bayly to describe]{.banner .lightyellow}
+The ELF10 method begins with a large set of conformers for the molecule. MMFF94 charges are assigned to the molecule,
+set to their absolute value, and then single-point Coulomb electrostatic energies evaluated for each conformer. The
+lowest-energy 2% of conformers are selected, and if there are more than 10, from these the most diverse 10 are selected.
+For this final conformer set (up to 10 conformers), the AM1 WBOs and charges for each conformer are averaged
+(by bond and by atom, respectively) and the BCCs are applied to the charges [@doi:10.1002/jcc.10128]. This method yields a set of AM1-BCC
+atomic partial charges and WBOs for the molecule which are relatively insensitive to the initial choice of conformer set,
+and which mitigate two pathologies of AM1-BCC charges: peculiar charges resulting from strong intramolecular electrostatic
+interactions (e.g. from internal hydrogen bonds or formal charges) and simple conformational variance.
 
 ![**Distribution of WBO in drug-like molecules have peaks at expected values**
 **[A]** The distribution of all WBOs for all bonds in molecules in set. The peak at one, close to two and close to thres correspond to
