moved hammett correlations to SI

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -123,7 +123,7 @@ The bond closer to the quinazoline (bond 23-19) has WBO distribution correlated 
 chloro fluoro phenyl (bond 23-24) is not as strongly coupled with the quinazoline. The trends are similar
 for other kinase inhibitors tested as shown in `(hold for SI)`{.red}.
 
-#### 3.3.3 ELF10 provides a useful way to capture informative conformation-independent WBOs
+#### 3.3.3 Electronically least-interacting functional group (ELF) method provides a useful way to capture informative conformation-independent WBOs
 
 ![**Standard deviations of conformation-dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
 The distribution of standard deviations of WBO distributions over conformations is shown in blue. The distribution of standard deviations of ELF10 WBO distributions for the same
@@ -158,7 +158,7 @@ either one or two nitrogen. Many of these bonds are conjugated as demonstrated b
 nitriles. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2_4.svg){#fig:wbo_dists}
 
 This method can also be applied to derive WBOs that are insensitive to conformers. To check how well ELF10 estimated $W_{AB}$ recapitulates the multiplicity of bonds,
-we calculated $W_{AB}$ from ELF10 AM1 calculations
+we calculated $W_{AB}$ from AM1 ELF10 calculations
 for all bonds in a set of molecules shown in SI Figure @fig:wbo_dist_mols. The distribution in figure @fig:wbo_dists corresponds
 closely with bond multiplicity. The density at ~ 0.7 correspond bonds involving sulfur and phosphorous since these are weaker and longer bonds. The peak at 1.0
 corresponds to C-H and C-C bonds, the peak close to 1.5 corresponds to bonds in aromatic rings, the peak close to 2.0 corresponds
@@ -184,17 +184,16 @@ We then calculated the ELF10 WBO for the bond attaching the functional
 group to the aromatic ring for all functional groups which resulted in 128 (25 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
 defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:subsituted_phenyls, B.
 It is interesting to note that the trend of decreasing WBOs for more electron
-donating groups are anti correlates with increasing Hammett substituent constants. In {@fig:subsituted_phenyls} C and D, the AM1 ELF10 WBO of the bond
-between the functional group and benzoic acid is plotted against their Hammett para and meta substituent constants. Functional groups
+donating groups are anti correlates with increasing Hammett substituent constants. In SI Figure @fig:hammett, the AM1 ELF10 WBO of the bond
+between the functional group and benzoic acid is plotted against their Hammett meta and para substituent constants (values were taken from Hansch et al. [@doi:10.1021/cr00002a004]). Functional groups
 that are more electron donating will have more electron density on the bond attaching the functional group to the benzoic acid. The resonance and/or inductive effect
 destabilize the benzoate, increases its pKa, which corresponds to lower substituent constants.
 
-![**Change in AM1 ELF10 WBOs correlates with barrier heights in torsion profiles**
+![**AM1 ELF10 Wiberg bond orders correlate with torsion barrier heights in related molecules**
 **[A]** Systems and functional groups used in the subsituted phenyl set. The functional groups were chosen to span a large range
 of electron donating and withdrawing groups.
-**[B]** AM1 ELF10 WBO distributions for the bond between the phenyl ring and $X_1$ in different chemical environments  **[C]** Hammett sigma para
-parameters vs AM1 ELF10 WBOs of  $X_1$ para to carboxylic acid **[D]** Hammett sigma meta parameters vs AM1 ELF10 WBOs of $X_1$ meta to
-carboxyilic acid **[E]** Selected QC torsion scan barrier heights vs ELF10 AM1 WBOs](images/figure_6.svg){#fig:subsituted_phenyls}
+**[B]** AM1 ELF10 WBO distributions for the bond between the phenyl ring and $X_1$ in different chemical environments
+**[E]** Selected QC torsion scan barrier heights vs AM1 ELF10 WBOs](images/figure_6.svg){#fig:subsituted_phenyls}
 
 |functional group | slope | $r^2$ | P value | standard error |
 |---|---|---|---|---|
@@ -231,10 +230,10 @@ shown in {@fig:biphenyls}D  generalizes to all functional groups tested in this 
 associated statistics for the fitted lines.
 
 ![**Löwdin-Wiberg bond orders are anti correlated with QC torsion scans**
-**[A]** QC torsions for methylamino in series of different chemical environment. Barrier heights increase with increasing ELF10 AM1 WBOs
+**[A]** QC torsions for methylamino in series of different chemical environment. Barrier heights increase with increasing AM1 ELF10 WBOs
 **[B]** Löwdin-Wiberg bond orders calculated at each point in the QC torsion scan using the same level of theory. The bond orders are
 anti correlated with QC torsion scans **[C]** QC scans for urea in a series of different chemical environment. Both profiles and
-energy barriers change with ELF10 AM1 WBOs **[D]** Löwdin-Wiberg bond orders are not perfectly anti correlated to QC scans](images/figure_7.svg){#fig:sub_phenyl_qc_scan}
+energy barriers change with AM1 ELF10 WBOs **[D]** Löwdin-Wiberg bond orders are not perfectly anti correlated to QC scans](images/figure_7.svg){#fig:sub_phenyl_qc_scan}
 
 For most functional groups, the change in WBOs correspond to changes in torsion barrier heights. `[hold for SI]`{.red}.
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
