--- a/content/99.si.md
+++ b/content/99.si.md
@@ -26,6 +26,10 @@ and their 95% CI is shown. **[C]** Pearson correlation coefficients for WBOs in 
 ![**Druglike molecules used to calculate ELF10 AM1 WBOs**
 This set of molecules were selected to cover bonds of different types and multiplicities](images/druglike_mols_for_wbo_dist_4.svg){#fig:wbo_dist_mols}
 
+![**Hammett parameters are anti-correlated with ELF10 WBOs**
+**[A]** Hammett sigma meta parameters vs AM1 ELF10 WBOs of X~1~ meta to carboxylic acid.
+ **[B]** Same as **A** but for para substituents](images/SI-hammett.svg){#fig:hammett}
+
 ![**Validation set**
 All molecules used in the validation set of fragmentation schemes. The bonds are highlighted by how sensitive they are to
 remote fragmentation. The redder bonds are more sensitive while the WBO distributions around the blue bonds do not change
