--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -170,7 +170,7 @@ and aromatic rings, respectively. Figure @fig:wbo_dists D shows distrbutions wit
 the expected values; 1, 1.5 and 3 for nitrogen which corresponds to single, conjugated and triple bonds and 1 and 2 for oxygens which correspond to
 single and carbonyl bonds. For the rest of this section we will be focusing on the robustness and generalizability of ELF10 WBOs.
 
-#### 3.3.4 WBOs are a robust signal to how remote substituent changes alter a bond's torsion barrier height
+#### 3.3.4 WBOs are a robust signal of how torsion barrier heights depend on remote chemical changes.
 To investigate how resonance and electronic effects from remote substituents change the torsion energy of a bond,
 we took inspiration from the Hammett equation [@doi:10.1021/ja01280a022] of reactions involving benzoic acid derivatives.
 The Hammett equation relates meta and para benzoic acid substituents to the acid's ionization equilibrium constants
@@ -179,9 +179,10 @@ The Hammett equation relates meta and para benzoic acid substituents to the acid
 
 Where $\sigma$ is a substituent constant and $\rho$ is a reaction constant. It aims to isolate the resonance and inductive effects
 of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para subsituted phenyls
-and pyridine @fig:subsituted_phenyls A with 25 functional groups that cover a wide range of electron donating and withdrawing groups.
-We then calculated the ELF10 WBO for the bond attaching the functional
-group to the aromatic ring for all functional groups which resulted in 128 (25 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
+and pyridine @fig:subsituted_phenyls A with 26 functional groups that cover a wide range of electron donating and withdrawing groups.
+(details on generating and accessing this set is in section 5.3.2 in detailed methods)
+We then calculated the ELF10 WBO for the bond attaching the functional group to the aromatic ring (highlighted green in
+Figure @fig:subsituted_phenyls A) for all functional groups which resulted in 133 (26 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
 defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:subsituted_phenyls, B.
 It is interesting to note that the trend of decreasing WBOs for more electron
 donating groups are anti correlates with increasing Hammett substituent constants. In SI Figure @fig:hammett, the AM1 ELF10 WBO of the bond
@@ -192,28 +193,28 @@ destabilize the benzoate, increases its pKa, which corresponds to lower substitu
 ![**AM1 ELF10 Wiberg bond orders correlate with torsion barrier heights in related molecules**
 **[A]** Systems and functional groups used in the subsituted phenyl set. The functional groups were chosen to span a large range
 of electron donating and withdrawing groups.
-**[B]** AM1 ELF10 WBO distributions for the bond between the phenyl ring and $X_1$ in different chemical environments
-**[E]** Selected QC torsion scan barrier heights vs AM1 ELF10 WBOs](images/figure_6.svg){#fig:subsituted_phenyls}
+**[B]** AM1 ELF10 WBO distributions for the bond between the phenyl ring and X~1~ in different chemical environments
+**[E]** Selected QC torsion scan barrier heights vs AM1 ELF10 WBOs](images/substituted_phenyls.svg){#fig:subsituted_phenyls}
 
-|functional group | slope | $r^2$ | P value | standard error |
+|X~1~ | slope | slope standard error | $r^2$ and 95% CI |
 |---|---|---|---|---|
-| N(Me)~2~ | 116.916250 | 0.880571 | 0.000019 | 14.352479 |
-| NHMe | 134.517241 |  0.896103 |  0.000033 | 16.194060 |
-| NH~2~ |   64.266814 |  0.577819 |  0.017438 | 20.763035 |
-| NHEt |  119.513117 |  0.836392 |  0.000552 | 19.978559 |
-| NH(C~3~H~7~) |  163.763962 |  0.871119 |  0.000236 | 23.808080 |
-| OH |  154.824936 |  0.729133 |  0.003393 | 35.666975 |
-| OMe |  185.309951 |  0.800852 |  0.006494 | 41.326214 |
-| OEt |  119.662499 |  0.479470 |  0.038706 | 47.124984 |
-| NHCON(Me)~2~ |  159.312781 |  0.579507 |  0.010533 | 47.979491 |
-| NHCONHMe |  127.645256 |  0.434585 |  0.053430 | 55.030363 |
-| NHCONH~2~ |  238.119990 |  0.734429 |  0.003158 | 54.120536 |
-| NHCOEt |  205.802258 |  0.692740 |  0.005374 | 51.804680 |
-| NHCOMe |  144.320372 |  0.457787 |  0.065376 | 64.121783 |
-| OCONH~2~ |  172.716947 |  0.508785 |  0.111518 | 84.854215 |
-| COOH |  267.218639 |  0.739937 |  0.061417 | 91.463658 |
-| COOEt |  149.012778 |  0.581298 |  0.077956 | 63.233457 |
-| NO~2~ |  302.072242 |  0.909174 |  0.003192 | 47.737899 |
+| N(Me)~2~ | 116.92 | 14.35 | 0.88$_{0.73}^{0.98}$ |
+| NHMe | 134.52 |  16.19 | 0.90$_{0.83}^{0.98}$ |
+| NH~2~ |   64.27|  20.76 | 0.58$_{0.06}^{0.95}$ |
+| NHEt |  119.51 |  19.98 | 0.84$_{0.61}^{0.98}$ |
+| NH(C~3~H~7~) |  163.76 |  23.81 | 0.87$_{0.73}^{0.99}$ |
+| OH |  154.82 |  35.67 | 0.73$_{0.26}^{0.98}$ |
+| OMe |  185.31 | 41.33 | 0.80$_{0.46}^{0.99}$ |
+| OEt |  119.66 | 47.12 | 0.48$_{0.07}^{0.88}$ |
+| NHCON(Me)~2~ |  159.31 |  47.98 | 0.58$_{0.23}^{0.95}$ |
+| NHCONHMe |  127.65 |  55.03| 0.43$_{0.04}^{0.95}$ |
+| NHCONH~2~ |  238.12 |  54.12 | 0.73$_{0.41}^{0.98}$ |
+| NHCOEt |  205.80 |  51.80 | 0.69$_{0.31}^{0.99}$ |
+| NHCOMe |  144.32 |  64.12 | 0.46$_{0.02}^{0.99}$ |
+| OCONH~2~ |  172.72 |  84.85 | 0.51$_{0.03}^{0.98}$ |
+| COOH |  267.23 |  91.46 | 0.74$_{0.04}^{1.0}$ |
+| COOEt |  149.01 |  63.23 | 0.58$_{0.13}^{1.0}$ |
+| NO~2~ |  302.07 | 47.74 | 0.91$_{79}^{1.0}$|
 
 Table: slope and associated statistics for torsion barrier height vs WBO for selected functional groups {#tbl:stats}
 
