--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -52,8 +52,9 @@ with different chemical group at the X~2~ position (methyl).
 functional groups for X~1~ were allowed to be at X~2~, we did not include the negative oxygen at X~2~ because OpenFF have
 not yet benchmarked the level of theory to use for anions.
 3. After selection, we had 140 molecules that we submitted to QCArchive for both QC and MM torsion scan. The dataset is available on QCArchive as a `TorsionDriveDataset` named
-`OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:biphenyls
+`OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:biphenyls.
 
+Scripts used to generate and analyze this dataset can be found in [github.com/choderalab/fragmenter_data/phenyl_benchmark](https://github.com/choderalab/fragmenter_data/tree/master/phenyl_benchmark)
 
 There is another subsituted phenyl set on QCArchive whose results are not shown in this paper because it was run with a different level of theory as the default
 OpenFF level of theory, included anions which we did not yet decide how to handle and did not have good coverage of WBO ranges.
