--- a/content/99.si.md
+++ b/content/99.si.md
@@ -14,7 +14,7 @@ is also a slight dependency on molecular size as shown in this figure](images/gr
 ![**Distribution of optimizations per torsion drive**
 This figures shows the distributions of optimizations per torsion drive when using wavefront propagation](images/opts_per_td_4.svg){#fig:opts_per_td}
 
-![**Varinace and correlations of WBO distributions with respect to conformations for a set of kinase inhibitors**
+![**Variance and correlations of WBO distributions with respect to conformations for a set of kinase inhibitors**
 This figure shows WBO distributions and correlations for a set of kinase inhibitors calculated at B3LYP-D3(BJ) / DZVP.
 Optimized conformations and their WBOs are on QCArchive (`OptimizationDataset`, named `Kinase Inhibitors: WBO Distributions`)](images/SI-KI-all.svg){#fig:kinase_inhibitors}
 
