added more SI figures

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -220,10 +220,10 @@ of electron donating and withdrawing groups.
 Table: slope and associated statistics for torsion barrier height vs WBO for selected functional groups {#tbl:stats}
 
 To investigate how these long range effects observed in the WBOs capture changes in the bonds' torsion potential energy, we ran representative QC torsion
-scans for 17 of the functional groups `(hold for SI)`{.red}. We did not run QC torsion scans for functional groups that either did not have a torsion such
+scans for 17 of the functional groups (SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5). We did not run QC torsion scans for functional groups that either did not have a torsion such
 as halogens, were congested such as trimethyl amonium and functional groups where the WBOs did not change by more than 0.01 for different functional
 groups at the meta or para position such as methyl. We chose the representative molecules for the 17 functional groups by sorting them
-by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in `[hold for SI]`{.red}.
+by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5.
 We show a representative series of torsion scan for the nitro functional group in figure {@fig:sub_phenyl_qc_scan}A. The torsion energy barrier height
 increase with increasing ELF10 WBO of the bond. In addition, {@fig:sub_phenyl_qc_scan}B  shows that the Wiberg-Lowdin bond orders are anti-correlated with
 the QC torsion scan which is the same result we saw for the initial bipheynl set discussed in the previous section. We also found that the linear
@@ -239,7 +239,7 @@ associated statistics for the fitted lines.
 anti correlated with QC torsion scans **[C]** QC scans for urea in a series of different chemical environment. Both profiles and
 energy barriers change with AM1 ELF10 WBOs **[D]** Wiberg bond orders are not perfectly anti correlated to QC scans](images/figure_7.svg){#fig:sub_phenyl_qc_scan}
 
-For most functional groups, the change in WBOs correspond to changes in torsion barrier heights. `[hold for SI]`{.red}.
+For most functional groups, the change in WBOs correspond to changes in torsion barrier heights (SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5).
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
 barrier heights increase, but the profile changes considerably. as shown in {@fig:sub_phenyl_qc_scan}C for urea. Interestingly, the Wiberg
 bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan} D. These phenomena and the discrepancies observed in Figure @fig:subsituted_phenyls D,
